--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Polish Flashcards</h1>
-
     <div class="menu-container" id="menuContainer">
-        <button class="large-button" onclick="showLessons()">Lessons</button>
-        <button class="large-button" onclick="showTest()">Test</button>
+        <button class="large-button" id="lessonButton" onclick="showLessons()">Lessons</button>
+        <button class="large-button" id="testButton" onclick="showTest()">Test</button>
     </div>
 
     <div class="content-container" id="contentContainer">
