--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <!-- Either lessons or test will be displayed here -->
     </div>
 
+    <!-- Include all scripts -->
     <script src="phrases.js"></script>
-    <script src="script.js"></script>
+    <script src="utils.js"></script> <!-- Utility functions -->
+    <script src="lessons.js"></script> <!-- Lessons logic -->
+    <script src="flashcards.js"></script> <!-- Flashcards logic -->
+    <script src="app.js"></script> <!-- Main app logic -->
 </body>
 </html>
