updated the theme

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </div>
 
     <div class="content-container" id="contentContainer">
-        <!-- Either lessons or test will be displayed here -->
+        <!-- Content (either lessons or flashcards) will be displayed here -->
     </div>
 
-    <!-- Include all scripts -->
+    <!-- Include scripts -->
     <script src="phrases.js"></script>
-    <script src="utils.js"></script> <!-- Utility functions -->
-    <script src="lessons.js"></script> <!-- Lessons logic -->
-    <script src="flashcards.js"></script> <!-- Flashcards logic -->
-    <script src="app.js"></script> <!-- Main app logic -->
+    <script src="utils.js"></script>
+    <script src="lessons.js"></script>
+    <script src="flashcards.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
