--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
 
     <!-- Include scripts -->
-    <script src="phrases.js"></script>
-    <script src="utils.js"></script>
-    <script src="lessons.js"></script>
-    <script src="flashcards.js"></script>
-    <script src="app.js"></script>
+    <script src="Polish/phrases.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/lessons.js"></script>
+    <script src="js/flashcards.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
