--- a/index.html
+++ b/index.html
@@ -13,20 +13,17 @@
         <button class="large-button" onclick="loadLanguage('Bengali')">Bengali</button>
     </div>
 
-    <!-- Dynamic buttons for Lessons and Test will appear here -->
-    <div class="menu-container" id="menuContainer" style="display:none;">
-        <button class="large-button" id="lessonButton" onclick="showLessons()">Lessons</button>
-        <button class="large-button" id="testButton" onclick="showTest()">Test</button>
-    </div>
+    <!-- Buttons for datasets (will be generated dynamically) -->
+    <div class="button-container"></div> <!-- Ensure this exists in your HTML -->
 
     <div class="content-container" id="contentContainer">
-        <!-- Lessons or test will be displayed here -->
+        <!-- Either lessons or test will be displayed here -->
     </div>
 
     <!-- Scripts -->
-    <script src="js/utils.js"></script> <!-- Utility functions -->
-    <script src="js/lessons.js"></script> <!-- Lessons logic -->
-    <script src="js/flashcards.js"></script> <!-- Flashcards logic -->
-    <script src="js/app.js"></script> <!-- Main app logic -->
+    <script src="js/utils.js"></script>
+    <script src="js/lessons.js"></script>
+    <script src="js/flashcards.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
