updated the datasets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Buttons for datasets (will be generated dynamically) -->
-    <div class="button-container"></div> <!-- Ensure this exists in your HTML -->
+    <div class="button-container"></div>
 
     <div class="content-container" id="contentContainer">
         <!-- Either lessons or test will be displayed here -->
@@ -25,5 +25,8 @@
     <script src="js/lessons.js"></script>
     <script src="js/flashcards.js"></script>
     <script src="js/app.js"></script>
+    <!-- Load both language phrase files -->
+    <script src="Polish/phrases.js"></script>  <!-- Load Polish dataset -->
+    <script src="Bengali/phrases.js"></script> <!-- Load Bengali dataset -->
 </body>
 </html>
