dynamically change theme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Language Flashcards</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  <!-- No theme is set at the launch -->
     <!-- Language selection buttons -->
     <div class="menu-container" id="languageMenuContainer">
         <button class="large-button" onclick="loadLanguage('Polish')">Polish</button>
