--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Language Flashcards</title>
+    <!-- Material Icons Link -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>  <!-- No theme is set at the launch -->
+<body>
     <!-- Language selection buttons -->
     <div class="menu-container" id="languageMenuContainer">
-        <button class="large-button" onclick="loadLanguage('Polish')">Polish</button>
-        <button class="large-button" onclick="loadLanguage('Bengali')">Bengali</button>
+        <button class="large-button" onclick="loadLanguage('Polish')">
+            <span class="material-icons">language</span> Polish
+        </button>
+        <button class="large-button" onclick="loadLanguage('Bengali')">
+            <span class="material-icons">language</span> Bengali
+        </button>
     </div>
 
     <!-- Lessons and Test Buttons -->
     <div class="menu-container" id="lessonsTestContainer">
-        <button class="large-button" id="lessonButton" onclick="showLessons()">Lessons</button>
-        <button class="large-button" id="testButton" onclick="showTest()">Test</button>
+        <button class="large-button" id="lessonButton" onclick="showLessons()">
+            <span class="material-icons">school</span> Lessons
+        </button>
+        <button class="large-button" id="testButton" onclick="showTest()">
+            <span class="material-icons">quiz</span> Test
+        </button>
     </div>
 
     <!-- Buttons for datasets (will be generated dynamically) -->
