removed dynamic theme changing

--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Language Flashcards</title>
-    <!-- Material Icons Link -->
+    <!-- Link to Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Link to CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Language selection buttons -->
     <div class="menu-container" id="languageMenuContainer">
         <button class="large-button" onclick="loadLanguage('Polish')">
-            <span class="material-icons">language</span> Polish
+            <span class="material-icons">flag</span> Polish
         </button>
         <button class="large-button" onclick="loadLanguage('Bengali')">
-            <span class="material-icons">language</span> Bengali
+            <span class="material-icons">flag</span> Bengali
         </button>
     </div>
 
     <!-- Lessons and Test Buttons -->
     <div class="menu-container" id="lessonsTestContainer">
         <button class="large-button" id="lessonButton" onclick="showLessons()">
-            <span class="material-icons">school</span> Lessons
+            <span class="material-icons">menu_book</span> Lessons
         </button>
         <button class="large-button" id="testButton" onclick="showTest()">
             <span class="material-icons">quiz</span> Test
