divided the css files

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Language Flashcards</title>
     <!-- Link to Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Link to CSS file -->
-    <link rel="stylesheet" href="style.css">
+    
+    <!-- Link to CSS files -->
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" href="css/flashcards.css">
 </head>
 <body>
-    <!-- Language selection buttons -->
+    <!-- Your HTML content goes here -->
     <div class="menu-container" id="languageMenuContainer">
         <button class="large-button" onclick="loadLanguage('Polish')">
             <span class="material-icons">flag</span> Polish
