--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Lessons and Test Buttons (disabled by default) -->
     <div class="menu-container" id="lessonsTestContainer">
-        <button class="large-button" id="lessonButton" onclick="showLessons()" disabled>
+        <button class="large-button" id="lessonButton" onclick="showLessons()">
             <span class="material-icons">menu_book</span> Lessons
         </button>
         <button class="large-button" id="testButton" onclick="showTest()" disabled>
