added support for Tamil

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button class="large-button" onclick="loadLanguage('Bengali')">
             <span class="material-icons">flag</span> Bengali
         </button>
+        <button class="large-button" onclick="loadLanguage('Tamil')">
+            <span class="material-icons">flag</span> Tamil
+        </button>
     </div>
 
     <!-- Lessons and Test Buttons (disabled by default) -->
@@ -44,6 +47,7 @@
     <!-- Scripts -->
     <script src="Polish/phrases.js"></script>  <!-- Load Polish dataset -->
     <script src="Bengali/phrases.js"></script> <!-- Load Bengali dataset -->
+    <script src="Tamil/phrases.js"></script> <!-- Load Bengali dataset -->
     <script src="js/utils.js"></script>
     <script src="js/lessons.js"></script>
     <script src="js/flashcards.js"></script>
