simplified adding new languages

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <!-- Language selection buttons -->
     <div class="menu-container" id="languageMenuContainer">
-        <button class="large-button" onclick="loadLanguage('Polish')">
+        <button id="polishButton" class="large-button" onclick="loadPolish()">
             <span class="material-icons">flag</span> Polish
         </button>
-        <button class="large-button" onclick="loadLanguage('Bengali')">
+        <button id="bengaliButton"  class="large-button" onclick="loadBengali()">
             <span class="material-icons">flag</span> Bengali
         </button>
-        <button class="large-button" onclick="loadLanguage('Tamil')">
+        <button  id="tamilButton" class="large-button" onclick="loadTamil()">
             <span class="material-icons">flag</span> Tamil
         </button>
     </div>
