--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 <body>
     <!-- Language selection buttons -->
     <div class="menu-container" id="languageMenuContainer">
-        <button id="polishButton" class="large-button" onclick="loadPolish()">
+        <button id="polishButton" class="large-button" onclick="loadPolish('polishButton')">
             <span class="material-icons">flag</span> Polish
         </button>
-        <button id="bengaliButton"  class="large-button" onclick="loadBengali()">
+        <button id="bengaliButton"  class="large-button" onclick="loadBengali('bengaliButton')">
             <span class="material-icons">flag</span> Bengali
         </button>
-        <button  id="tamilButton" class="large-button" onclick="loadTamil()">
+        <button  id="tamilButton" class="large-button" onclick="loadTamil('tamilButton')">
+            <span class="material-icons">flag</span> Tamil
+        </button>
+        <button  id="frenchButton" class="large-button" onclick="loadFrench('frenchButton')">
             <span class="material-icons">flag</span> Tamil
         </button>
     </div>
