added support for french

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="material-icons">flag</span> Tamil
         </button>
         <button  id="frenchButton" class="large-button" onclick="loadFrench('frenchButton')">
-            <span class="material-icons">flag</span> Tamil
+            <span class="material-icons">flag</span> French
         </button>
     </div>
 
