updated support for french

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="Polish/phrases.js"></script>  <!-- Load Polish dataset -->
     <script src="Bengali/phrases.js"></script> <!-- Load Bengali dataset -->
     <script src="Tamil/phrases.js"></script> <!-- Load Bengali dataset -->
+    <script src="French/phrases.js"></script> <!-- Load Bengali dataset -->
     <script src="js/utils.js"></script>
     <script src="js/lessons.js"></script>
     <script src="js/flashcards.js"></script>
